--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="bottom_navigation_height">50dp</dimen>
 
+    <dimen name="radius_request_avatar">20dp</dimen>
     <dimen name="radius_home_avatar">50dp</dimen>
     <dimen name="radius_profile_avatar">70dp</dimen>
 
