--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -79,6 +79,20 @@
             app:layout_constraintStart_toEndOf="@+id/text_profile_mileage"
             app:layout_constraintTop_toTopOf="@+id/text_profile_mileage" />
 
+        <TextView
+            android:id="@+id/text_profile_request"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/corner_dialog"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="有新的邀請"
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="@+id/image_profile_photo"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.TabLayout
