--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -54,16 +54,29 @@
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
+
+    <ImageButton
+        android:id="@+id/imageButton_exit"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/icon_circle"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_map"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@mipmap/icon_log_out" />
+
     <ImageButton
         android:id="@+id/imageButton_talk_friend"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/icon_circle"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/constraint_trip_search"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_map"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraint_trip_search"
         app:srcCompat="@mipmap/icon_chat" />
 
     <ImageButton
@@ -71,11 +84,11 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/icon_circle"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/constraint_trip_search"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_map"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraint_trip_search"
         app:srcCompat="@mipmap/icon_add_friend" />
 
     <ImageButton
@@ -83,11 +96,11 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/icon_circle"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/constraint_trip_search"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_map"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraint_trip_search"
         app:srcCompat="@mipmap/icon_high_five" />
 
     <ImageView
@@ -95,15 +108,15 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/icon_circle"
+        android:visibility="invisible"
         android:paddingLeft="10dp"
         android:paddingTop="8dp"
         android:paddingRight="8dp"
         android:paddingBottom="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/fragment_map"
+        app:layout_constraintBottom_toBottomOf="@+id/constraint_trip_search"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/constraint_trip_search"
         app:srcCompat="@mipmap/icon_refresh" />
 
     <ImageView
