--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,12 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
+    <style name="Dialog.FullScreen" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
     <style name="mySpinnerItemStyle" parent="ThemeOverlay.AppCompat.Dark">
         <item name="android:textColor">#000</item>
         <item name="android:color">#000</item>
