--- a/app/src/main/res/layout/dialog_home_filter.xml
+++ b/app/src/main/res/layout/dialog_home_filter.xml
@@ -36,7 +36,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout10"
         android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -72,9 +72,14 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/spinner_background"
+            android:popupBackground="@android:color/white"
+            android:popupElevation="3dp"
+            android:textAlignment="center"
             android:entries="@array/filter_trip_year"
             android:spinnerMode="dropdown"
-            android:theme="@style/Spinner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_filter_title_year"
@@ -85,7 +90,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout12"
         android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -122,9 +127,14 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/spinner_background"
+            android:popupBackground="@android:color/white"
+            android:popupElevation="3dp"
+            android:textAlignment="center"
             android:entries="@array/filter_trip_month"
             android:spinnerMode="dropdown"
-            android:theme="@style/Spinner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_filter_title_month"
@@ -135,7 +145,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout18"
         android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -181,6 +191,7 @@
             android:layout_marginEnd="8dp"
             android:max="30"
             android:thumbTint="@color/white"
+            android:progressTint="@color/white"
             android:secondaryProgressTint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/text_filter_day_number"
             app:layout_constraintEnd_toEndOf="parent"
@@ -192,7 +203,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout13"
         android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -229,9 +240,14 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@drawable/spinner_background"
+            android:popupBackground="@android:color/white"
+            android:popupElevation="3dp"
+            android:textAlignment="center"
             android:entries="@array/filter_trip_country_list"
             android:spinnerMode="dropdown"
-            android:theme="@style/Spinner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_filter_title_country"
@@ -242,7 +258,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout20"
         android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -300,7 +316,7 @@
     <Button
         android:id="@+id/button_filter_send"
         android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
