--- a/app/src/main/res/layout/item_request.xml
+++ b/app/src/main/res/layout/item_request.xml
@@ -49,12 +49,13 @@
         <Button
             android:id="@+id/image_request_agree"
             android:layout_width="50dp"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/corner_dialog"
             android:elevation="6dp"
+            android:gravity="center"
             android:text="接受"
             android:textColor="@color/black_66"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -64,13 +65,14 @@
         <Button
             android:id="@+id/image_request_disagree"
             android:layout_width="50dp"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/corner_dialog_background"
             android:elevation="6dp"
             android:text="拒絕"
+            android:gravity="center"
             android:textColor="@color/white_gray_66"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/image_request_agree"
