--- a/app/src/main/res/drawable/icon_circle.xml
+++ b/app/src/main/res/drawable/icon_circle.xml
@@ -1,8 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="30dp"/>
-    <solid android:color="@color/white" />
+    <corners android:radius="40dp"/>
+    <solid android:color="@color/white_gray_BB" />
     <stroke
-        android:width="2dp"
-        android:color="#66969591" />
+        android:width="1dp"
+        android:color="@color/gray_33" />
+
 </shape>
