--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -44,15 +44,17 @@
 
     <Button
         android:id="@+id/button_login"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/icon_circle"
+        android:background="@drawable/icon_circle_login"
         android:elevation="6dp"
         android:text="@string/facebook_login"
         android:textColor="@color/blue"
         android:textSize="18sp"
         android:typeface="monospace"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/text_login_title"
         app:layout_constraintHorizontal_bias="0.496"
