--- a/app/src/main/res/layout/fragment_profile_child.xml
+++ b/app/src/main/res/layout/fragment_profile_child.xml
@@ -9,7 +9,7 @@
         android:id="@+id/recycle_profile_child"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/image_profile_child_add"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
