--- a/app/src/main/res/layout/item_profile_newtrip.xml
+++ b/app/src/main/res/layout/item_profile_newtrip.xml
@@ -61,9 +61,9 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:typeface="monospace"
-                app:layout_constraintBottom_toBottomOf="@+id/image_newtrip_photo"
+                app:layout_constraintBottom_toTopOf="@+id/image_newtrip_owner_collection"
                 app:layout_constraintStart_toEndOf="@+id/image_newtrip_photo"
-                app:layout_constraintTop_toTopOf="@+id/image_newtrip_photo" />
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout16" />
 
             <ImageView
                 android:id="@+id/image_newtrip_photo"
@@ -101,6 +101,8 @@
                 app:layout_constraintTop_toTopOf="@+id/text_newtrip_owner_number"
                 app:srcCompat="@drawable/ic_person_outline_black_24dp" />
 
+
+
             <ImageButton
                 android:id="@+id/imageButton_newtrip_delete"
                 android:layout_width="0dp"
@@ -112,6 +114,33 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_delete_forever_black_24dp" />
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraintLayout16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/trip_content_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/text_newtrip_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:typeface="monospace"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </android.support.constraint.ConstraintLayout>
 
 
         </android.support.constraint.ConstraintLayout>
