--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="radius_home_avatar">50dp</dimen>
     <dimen name="radius_profile_avatar">70dp</dimen>
     <dimen name="login_title">60sp</dimen>
+    <dimen name="text">14sp</dimen>
 
 </resources>
