--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,14 +25,13 @@
     </style>
 
     <style name="mySpinnerItemStyle" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="android:textColor">#000</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:color">#000</item>
     </style>
 
     <style name="Spinner" parent="Widget.AppCompat.Light.DropDownItem.Spinner">
-        <item name="android:paddingStart">0dp</item>
-        <item name="android:paddingEnd">0dp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/gray_99</item>
         <item name="android:textSize">14sp</item>
     </style>
 
